@@ -1319,8 +1319,12 @@
   <!-- Timeline Service's Configuration-->
 
   <property>
-    <description>Indicate to clients whether timeline service is enabled or not.
-    If enabled, clients will put entities and events to the timeline server.
+    <description>
+    In the server side it indicates whether timeline service is enabled or not.
+    And in the client side, users can enable it to indicate whether client wants
+    to use timeline service. If it's enabled in the client side along with
+    security, then yarn client tries to fetch the delegation tokens for the
+    timeline server.
     </description>
     <name>yarn.timeline-service.enabled</name>
     <value>false</value>
@@ -1472,7 +1476,10 @@
   </property>
 
   <property>
-    <description>Client policy for whether timeline operations are non-fatal</description>
+    <description>Client policy for whether timeline operations are non-fatal.
+    Should the failure to obtain a delegation token be considered an application
+    failure (option = false),  or should the client attempt to continue to
+    publish information without it (option=true)</description>
     <name>yarn.timeline-service.client.best-effort</name>
     <value>false</value>
   </property>
